tests/specs/ecosystem/open_schemas/valibot/0_1_0.test
open-schemas/valibot/0.1.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-type]: missing explicit type in the public API
 --> /openai/chat.ts:6:14
  | 
6 | export const ChatCompletionRequestSystemMessage = v.object({
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
  | 
  = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:15:14
   | 
15 | export const ChatCompletionRequestMessageTextContentPart = v.object({
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:23:14
   | 
23 | export const ChatCompletionRequestMessageImageContentPart = v.object({
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:36:14
   | 
36 | export const ChatCompletionRequestMessageContentPart = v.union([
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:44:14
   | 
44 | export const ChatCompletionRequestUserMessage = v.object({
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:56:14
   | 
56 | export const ChatCompletionMessageToolCall = v.object({
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:68:14
   | 
68 | export const ChatCompletionRequestAssistantMessage = v.object({
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:78:14
   | 
78 | export const ChatCompletionRequestToolMessage = v.object({
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:87:14
   | 
87 | export const ChatCompletionRequestMessage = v.union([
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
  --> /openai/chat.ts:95:14
   | 
95 | export const ChatCompletionTool = v.object({
   |              ^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
   | 
   = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:107:14
    | 
107 | export const CreateChatCompletionRequest = v.object({
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:144:14
    | 
144 | export const ChatCompletionToolCall = v.object({
    |              ^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:154:14
    | 
154 | export const FinishReason = v.union([
    |              ^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:162:14
    | 
162 | export const ChatCompletionLogprobs = v.object({
    |              ^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:182:14
    | 
182 | export const ChatCompletionChoiceContent = v.object({
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:189:14
    | 
189 | export const ChatCompletionChoice = v.object({
    |              ^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:197:14
    | 
197 | export const ChatCompletionObject = v.object({
    |              ^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:214:14
    | 
214 | export const ChatCompletionChunkChoice = v.object({
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


error[missing-explicit-type]: missing explicit type in the public API
   --> /openai/chat.ts:224:14
    | 
224 | export const ChatCompletionChunkObject = v.object({
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^ this symbol is missing an explicit type
    | 
    = hint: add an explicit type annotation to the symbol

  info: all symbols in the public API must have an explicit type
  docs: https://jsr.io/go/slow-type-missing-explicit-type


